# triangle-formation-px4

./: README.md  gitignore
install/: local_setup.sh  setup.sh
install/formation_bringup/share/formation_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/formation_bringup/share/formation_bringup/config/: formation.yaml
install/formation_bringup/share/formation_bringup/launch/: formation.launch.py
install/formation_bringup/share/formation_bringup/scripts/: start_px4_instances.sh
install/formation_control/lib/formation_control/: coordinator  drone_interface
install/formation_control/share/formation_control/: package.ps1  package.sh
install/formation_core/share/formation_core/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/formation_interfaces/share/formation_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/formation_interfaces/share/formation_interfaces/cmake/: export_formation_interfaces__rosidl_generator_cExport-noconfig.cmake  export_formation_interfaces__rosidl_generator_cppExport.cmake  export_formation_interfaces__rosidl_generator_pyExport-noconfig.cmake  formation_interfacesConfig.cmake  (+6 more)
install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
log/: latest_build
src/formation_bringup/: package.xml  setup.py
src/formation_control/: package.xml  setup.py
src/formation_control/formation_control/: coordinator_node.py
src/formation_core/: setup.cfg  setup.py
src/formation_core/formation_core/: types.py
src/formation_core/formation_core/feedback/: base.py
src/formation_core/formation_core/formations/: triangle.py
src/formation_core/formation_core/trajectories/: circle.py
src/formation_core/test/: test_geometry.py
src/formation_interfaces/: CMakeLists.txt
(+56 files in other folders)
