<?xml version="1.0"?>
<package format="3">
  <name>formation_control</name>
  <version>0.1.0</version>
  <description>ROS 2 nodes wiring formation_core to PX4 over uXRCE-DDS.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>BSD-3-Clause</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>formation_core</exec_depend>
  <exec_depend>formation_interfaces</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
