<?xml version="1.0"?>
<package format="3">
  <name>formation_core</name>
  <version>0.1.0</version>
  <description>Pure-Python formation algorithms (no ROS deps): trajectories,
  formation geometry, frame math, and formation-feedback laws.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>BSD-3-Clause</license>
  <exec_depend>python3-numpy</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
